# gyat

src/diff_drive_robot_gz_sim/: CMakeLists.txt  package.xml
src/diff_drive_robot_gz_sim/config/: mobile_base_control.yaml
src/diff_drive_robot_gz_sim/launch/: MRobot_base.launch.py  MRobot_control.launch.py  MRobot_sensor.launch.py  MRobot_tut4.launch.py  ros_gz_bridge.launch.py
src/diff_drive_robot_gz_sim/rviz/: view_robot_mapping_and_navigation.rviz
src/diff_drive_robot_gz_sim/urdf/: ICTE4001_MRobot_base.urdf.xacro  ICTE4001_MRobot_control.urdf.xacro  ICTE4001_MRobot_sensor.urdf.xacro
src/diff_drive_robot_gz_sim/worlds/: office_world.sdf
src/diff_drive_robot_gz_sim/worlds/office/: model.sdf
src/rizz/: CMakeLists.txt  package.xml
src/rizz/config/: localisation.yaml
src/rizz/include/tb4_cpp_prac6/: angleutils.hpp  iar_amcl_node.hpp  iar_pf_kdtree.hpp
src/rizz/launch/: localisation_launch.py
src/rizz/maps/: lab_ICTE4001_Prac4.pgm  lab_ICTE4001_Prac4.yaml
src/rizz/src/: am.cpp  node.cpp  tree.cpp
src/robot_motion_controller/: CMakeLists.txt
src/robot_motion_controller/src/: person_follower.cpp  wall_follower.cpp
